# catherine

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Catherine_Installer  Catherine_Uninstaller  LICENSE  Makefile  README.md  build.rs  build_modules.sh  catherine.json  catherine_install  install.sh  modules.json  requirements.txt  tauri.conf.json
.github/: FUNDING.yml  workflow.yml
.github/workflows/: workflow.yml
modules/: .gitignore  INSTALLATION.md  LICENSE  README.md  build.sh  mod.rs  modules.json
modules/data/exe/: exec_dump.py
modules/data/hex/c/: c_hex_dump.c
modules/db/redis/: redis_analysis.py
modules/mercy/: README.md
modules/net/: README.md
modules/net/netscan/src/: go.sum
modules/web/parsers/: links.py
public/: crack_hash.html  decode.html  defang.html  extract_zip.html  gen_domain.html  identify.html  index.html  parse_email.html  sysdump.html  whois.html
public/js/: index.js
server/: README.md
server/public/: README.md  index.html
server/public/err/: 404.html
src/: catherine.rs  main.rs  meta.rs
src/core/: commands.rs  mod.rs  shell.rs  utils.rs  x.rs
src/modules/: README.md  build.sh  hex.rs  mod.rs  modules.json  requirements.txt  rust_hex_dump.rs
src/modules/data/: README.md  mod.rs
src/modules/data/hex/: mod.rs
src/modules/data/hex/c/: Makefile
src/modules/data/hex/rust/: rust_hex_dump.rs
src/modules/db/: README.md  redis.py
src/modules/db/redis/: redis_analysis.py
src/modules/formats/: README.md  mod.rs
src/modules/formats/exe/: win_exe_dump.py
src/modules/formats/hex/: c_hex_dump.c  mod.rs  rs_hex_dump.rs
src/modules/mercy/: README.md  extension.py
src/modules/net/: README.md
src/modules/net/netscan/src/: go.mod  main.go
src/modules/net/netscan/src/cmds/cli/: commands.go
src/modules/web/: README.md
src/modules/web/parsers/: links.py
src/ui/: controller.rs  mod.rs
